added picklist style classes to css, modifies usergroup edit page

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -64,14 +64,16 @@
                                 </div>
                                 <div>
                                     <p:panelGrid columns="3" layout="grid">
-                                        <p:outputLabel for="authoritiesGlobalPick" value="#{msgs.authoritiesGlobal}"/>
-                                        <p:outputLabel rendered="#{BenutzergruppenForm.clientsAvailable}"
-                                                       for="authoritiesClientPick" value="#{msgs.authoritiesClient}"/>
-                                        <p:outputLabel rendered="#{BenutzergruppenForm.projectsAvailable}"
-                                                       for="authoritiesProjectPick" value="#{msgs.authoritiesProject}"/>
-
                                         <!--global authorities-->
                                         <h:panelGroup>
+                                            <h3>
+                                                <h:outputText value="#{msgs.authoritiesGlobal}"/>
+                                            </h3>
+                                            <div style="visibility: hidden;margin-top: 15px">
+                                                <p:outputLabel for="hiddenSelect" value="hidden"/>
+                                                <p:selectOneMenu id="hiddenSelect">
+                                                </p:selectOneMenu>
+                                            </div>
                                             <p:pickList id="authoritiesGlobalPick"
                                                         value="#{BenutzergruppenForm.authorities}"
                                                         converter="#{authorityConverter}"
@@ -86,15 +88,20 @@
 
                                         <!--client authorities-->
                                         <h:panelGroup rendered="#{BenutzergruppenForm.clientsAvailable}">
-                                            <p:outputLabel for="clientSelect" value="#{msgs.client}"/>
-                                            <p:selectOneMenu id="clientSelect"
-                                                             converter="#{clientConverter}"
-                                                             value="#{BenutzergruppenForm.selectedClient}">
-                                                <f:selectItems value="#{BenutzergruppenForm.clients}" var="client"
-                                                               itemValue="#{client}"
-                                                               itemLabel="#{client.name}"/>
-                                                <p:ajax event="change" update="authoritiesClientPick"/>
-                                            </p:selectOneMenu>
+                                            <h3>
+                                                <h:outputText value="#{msgs.authoritiesClient}"/>
+                                            </h3>
+                                            <div style="margin-top: 15px">
+                                                <p:outputLabel for="clientSelect" value="#{msgs.client}"/>
+                                                <p:selectOneMenu id="clientSelect"
+                                                                 converter="#{clientConverter}"
+                                                                 value="#{BenutzergruppenForm.selectedClient}">
+                                                    <f:selectItems value="#{BenutzergruppenForm.clients}" var="client"
+                                                                   itemValue="#{client}"
+                                                                   itemLabel="#{client.name}"/>
+                                                    <p:ajax event="change" update="authoritiesClientPick"/>
+                                                </p:selectOneMenu>
+                                            </div>
                                             <p:pickList id="authoritiesClientPick"
                                                         value="#{BenutzergruppenForm.authoritiesByCurrentClient}"
                                                         converter="#{authorityConverter}"
@@ -110,15 +117,20 @@
 
                                         <!--project authorities-->
                                         <h:panelGroup rendered="#{BenutzergruppenForm.projectsAvailable}">
-                                            <p:outputLabel for="projectSelect" value="#{msgs.project}"/>
-                                            <p:selectOneMenu id="projectSelect"
-                                                             converter="#{projectConverter}"
-                                                             value="#{BenutzergruppenForm.selectedProject}">
-                                                <f:selectItems value="#{BenutzergruppenForm.projects}" var="project"
-                                                               itemValue="#{project}"
-                                                               itemLabel="#{project.title}"/>
-                                                <p:ajax event="change" update="authoritiesProjectPick"/>
-                                            </p:selectOneMenu>
+                                            <h3>
+                                                <h:outputText value="#{msgs.authoritiesProject}"/>
+                                            </h3>
+                                            <div style="margin-top: 15px">
+                                                <p:outputLabel for="projectSelect" value="#{msgs.project}"/>
+                                                <p:selectOneMenu id="projectSelect"
+                                                                 converter="#{projectConverter}"
+                                                                 value="#{BenutzergruppenForm.selectedProject}">
+                                                    <f:selectItems value="#{BenutzergruppenForm.projects}" var="project"
+                                                                   itemValue="#{project}"
+                                                                   itemLabel="#{project.title}"/>
+                                                    <p:ajax event="change" update="authoritiesProjectPick"/>
+                                                </p:selectOneMenu>
+                                            </div>
                                             <p:pickList id="authoritiesProjectPick"
                                                         value="#{BenutzergruppenForm.authoritiesByCurrentProject}"
                                                         converter="#{authorityConverter}"
