--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -21,19 +21,30 @@
     </f:metadata>
 
     <ui:define name="contentHeader">
+        <h:outputScript name="js/save.js" target="body" />
+        <script>
+            window.onload = function () {checkForm('editForm')};
+        </script>
         <h3>
             <h:outputText value="#{msgs.clientEdit}"
                           rendered="#{ClientForm.client.id ne null}"/>
             <h:outputText value="#{msgs.clientNew}"
                           rendered="#{ClientForm.client.id eq null}"/>
         </h3>
-        <p:commandButton value="#{msgs.speichern}"
+        <p:commandButton id="save"
+                         widgetVar="save"
+                         value="#{msgs.speichern}"
                          action="#{ClientForm.save}"
                          update="notifications"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
+                         disabled="#{ClientForm.saveDisabled}"
                          onclick="PF('notifications').renderMessage({'summary':'#{msgs.clientSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                          styleClass="button-filled-blue"/>
+        <p:commandButton id="saveButtonToggler"
+                         actionListener="#{ClientForm.setSaveDisabled(false)}"
+                         update="save"
+                         style="display:none;"/>
         <p:button value="#{msgs.abbrechen}" outcome="clients"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
@@ -46,6 +57,7 @@
                     <p:inputText id="name"
                                  placeholder="#{msgs.name}"
                                  value="#{ClientForm.client.name}"
+                                 onblur="compareForm('editForm')"
                                  required="true"/>
                 </p:panelGrid>
             </p:tab>
