--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -23,6 +23,10 @@
     </f:metadata>
 
     <ui:define name="contentHeader">
+        <h:outputScript name="js/save.js" target="body" />
+        <script>
+            window.onload = function () {checkForm('editForm')};
+        </script>
         <h3>
             <h:outputText value="#{msgs.schrittHinzufuegen}"
                           rendered="#{empty ProzessverwaltungForm.task.title}"/>
@@ -34,7 +38,12 @@
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          onclick="PF('notifications').renderMessage({'summary':'#{msgs.taskSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
+                         disabled="#{ProzessverwaltungForm.saveDisabled}"
                          update="notifications"/>
+        <p:commandButton id="saveButtonToggler"
+                         actionListener="#{ProzessverwaltungForm.setSaveDisabled(false)}"
+                         update="save"
+                         style="display:none;"/>
         <p:button id="cancel" value="#{msgs.abbrechen}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
