--- a/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
@@ -35,14 +35,14 @@
             <div>
                 <p:outputLabel for="dmsExportImageDir" value="#{msgs.dmsImportImagesPfad}" />
                 <p:inputText id="dmsExportImageDir" placeholder="#{msgs.dmsImportImagesPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportImagesPath}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="blur" oncomplete="compareForm('projectEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:dmsExportImageDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportErrorDir" value="#{msgs.dmsImportErrorPfad}" />
                 <p:inputText id="dmsExportErrorDir" placeholder="#{msgs.dmsImportErrorPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportErrorPath}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="blur" oncomplete="compareForm('projectEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:dmsExportErrorDir')" disabled="#{ProjekteForm.locked}"/>
             </div>
@@ -55,7 +55,7 @@
             <div>
                 <p:outputLabel for="timeout" value="#{msgs.timeout}" />
                 <p:inputText id="timeout" placeholder="#{msgs.timeout}" class="input" value="#{ProjekteForm.myProjekt.dmsImportTimeOut}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="blur" oncomplete="compareForm('projectEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
             </div>
         </p:row>
@@ -70,14 +70,14 @@
             <div>
                 <p:outputLabel for="dmsExportDir" value="#{msgs.dmsImportPfadXmlDatei}" />
                 <p:inputText id="dmsExportDir" placeholder="#{msgs.dmsImportPfadXmlDatei}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportRootPath}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="blur" oncomplete="compareForm('projectEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:dmsExportDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
             <div>
                 <p:outputLabel for="dmsExportSuccessDir" value="#{msgs.dmsImportSuccessPfad}" />
                 <p:inputText id="dmsExportSuccessDir" placeholder="#{msgs.dmsImportSuccessPfad}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.dmsImportSuccessPath}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="blur" oncomplete="compareForm('projectEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
                 <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:dmsExportSuccessDir');" disabled="#{ProjekteForm.locked}"/>
             </div>
