--- a/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
@@ -29,7 +29,7 @@
                 <p:outputLabel for="internalFormat" value="#{msgs.internesSpeicherformat}" />
                 <p:selectOneMenu id="internalFormat" value="#{ProjekteForm.myProjekt.fileFormatInternal}" disabled="#{ProjekteForm.locked}">
                     <f:selectItems value="#{HelperForm.fileFormatsInternalOnly}" />
-                    <p:ajax event="change" oncomplete="jQuery('#projectEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
             </div>
             <div>
@@ -49,7 +49,7 @@
             <div>
                 <p:outputLabel for="automaticExport" value="#{msgs.automatischerDmsImport}" />
                 <p:selectBooleanCheckbox id="automaticExport" value="#{ProjekteForm.myProjekt.useDmsImport}" class="input" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="change" oncomplete="jQuery('#projectEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
@@ -64,7 +64,7 @@
                 <p:outputLabel for="DmsFormat" value="#{msgs.dmsExportformat}" />
                 <p:selectOneMenu id="DmsFormat" value="#{ProjekteForm.myProjekt.fileFormatDmsExport}" disabled="#{ProjekteForm.locked}">
                     <f:selectItems value="#{HelperForm.fileFormats}" />
-                    <p:ajax event="change" oncomplete="jQuery('#projectEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
             </div>
             <div>
@@ -84,7 +84,7 @@
             <div>
                 <p:outputLabel for="createDir" value="#{msgs.dmsImportCreateProcessFolder}" />
                 <p:selectBooleanCheckbox id="createDir" class="input" value="#{ProjekteForm.myProjekt.dmsImportCreateProcessFolder}" disabled="#{ProjekteForm.locked}">
-                    <p:ajax event="change" oncomplete="jQuery('#projectEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectBooleanCheckbox>
             </div>
         </p:row>
